# mongodb-docker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  create_appdir.sh  install_mongodb.sh  mongod.conf  oci.json
.github/workflows/: autobuild-workflow.yaml
src/: cli.rs  config.rs  deb.rs  deps.rs  main.rs  repo.rs  runtime.rs
