[package]
name = "mongodb-appdir-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ar = "0.9"
bzip2 = "0.4"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1"
goblin = "0.8"
rayon = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
xz2 = "0.1"
zstd = "0.13"

[dev-dependencies]
pretty_assertions = "1.4"